refatorando todo o código

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
         <span>(19) 98143-2030</span>
       </div>
       <div class="social-icons">
-        <a href="#">
-          <img class="social-icon" src="./img/twitter.svg" alt="Twitter">
+        <a class="social-icon tooltip" href="https://twitter.com/deia_organizer">
+          <span class="tooltiptext">Twitter</span>
+          <img src="img/twitter.svg" alt="Twitter">
         </a>
-        <a href="#">
-          <img class="social-icon" src="./img/github.svg" alt="Github">
+        <a class="social-icon tooltip" href="https://www.facebook.com/andreiasalustianoorganizer">
+          <span class="tooltiptext">Facebook</span>
+          <img src="img/facebook.png" alt="Facebook">
         </a>
-        <a href="#">
-          <img class="social-icon" src="./img/instagram.svg" alt="Instagram">
+        <a class="social-icon tooltip" href="https://www.instagram.com/deia_organizer/?hl=af">
+          <span class="tooltiptext">Instagram</span>
+          <img src="img/instagram.svg" alt="Instagram">
         </a>
       </div>
     </div>
@@ -94,7 +97,7 @@
   </section>
 
   <section id="portfolio" class="portfolio">
-    <h1>Portfolio</h1>
+    <h1>Portfólio</h1>
     <div class="portfolio-items">
 
       <!-- Portfolio Item 1 -->
@@ -271,9 +274,9 @@
 
       <!-- Portfolio Item 4 -->
       <figure class="portfolio-item">
-        <img src="img/portfolio-04.jpg" alt="portfolio item">
+        <img src="img/infantil/infantil_01.jpg" alt="portfolio item">
         <figcaption>
-          <h2 class="portfolio-title">Nome do Projeto</h2>
+          <h2 class="portfolio-title">Infantil</h2>
           <p class="portfolio-desc">Uma curta descrição vai aqui</p>
           <a href="#" class="portfolio-link">Mais</a>
         </figcaption>
@@ -290,57 +293,40 @@
 
           <div class="portfolio-header header-four">
             <div class="portfolio-title-box">
-              <h2 class="portfolio-title">Nome do Projeto</h2>
+              <h2 class="portfolio-title">Infantil</h2>
               <p class="portfolio-subtitle">Descrição vai Aqui</p>
             </div>
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-full-width" src="img/portfolio-04.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-left" src="img/portfolio-04.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-right" src="img/portfolio-04.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
+            <img src="img/infantil/infantil_02.jpg" alt="an image">
+            <img src="img/infantil/infantil_03.jpg" alt="an image">
+            <img src="img/infantil/infantil_04.jpg" alt="an image">
+            <img src="img/infantil/infantil_05.jpg" alt="an image">
+            <img src="img/infantil/infantil_06.jpg" alt="an image">
+            <img src="img/infantil/infantil_07.jpg" alt="an image">
+            <img src="img/infantil/infantil_08.jpg" alt="an image">
+            <img src="img/infantil/infantil_09.jpg" alt="an image">
+            <img src="img/infantil/infantil_10.jpg" alt="an image">
+            <img src="img/infantil/infantil_11.jpg" alt="an image">
+            <img src="img/infantil/infantil_12.jpg" alt="an image">
+            <img src="img/infantil/infantil_13.jpg" alt="an image">
+            <img src="img/infantil/infantil_14.jpg" alt="an image">
+            <img src="img/infantil/infantil_15.jpg" alt="an image">
+            <img src="img/infantil/infantil_16.jpg" alt="an image">
+            <img src="img/infantil/infantil_17.jpg" alt="an image">
+            <img src="img/infantil/infantil_18.jpg" alt="an image">
+            <img src="img/infantil/infantil_19.jpg" alt="an image">
+            <img src="img/infantil/infantil_20.jpg" alt="an image">
+            <img src="img/infantil/infantil_21.jpg" alt="an image">
+            <img src="img/infantil/infantil_22.jpg" alt="an image">
+            <img src="img/infantil/infantil_23.jpg" alt="an image">
+            <img src="img/infantil/infantil_24.jpg" alt="an image">
+            <img src="img/infantil/infantil_25.jpg" alt="an image">
+            <img src="img/infantil/infantil_26.jpg" alt="an image">
+            <img src="img/infantil/infantil_27.jpg" alt="an image">
+            <img src="img/infantil/infantil_28.jpg" alt="an image">
+            <img src="img/infantil/infantil_29.jpg" alt="an image">
           </div>
         </div>
         <!-- /modal -->
@@ -348,9 +334,9 @@
 
       <!-- Portfolio Item 5 -->
       <figure class="portfolio-item">
-        <img src="img/portfolio-05.jpg" alt="portfolio item">
+        <img src="img/lavanderia/lavanderia_01.jpg" alt="portfolio item">
         <figcaption>
-          <h2 class="portfolio-title">Nome do Projeto</h2>
+          <h2 class="portfolio-title">Lavanderia</h2>
           <p class="portfolio-desc">Uma curta descrição vai aqui</p>
           <a href="#" class="portfolio-link">Mais</a>
         </figcaption>
@@ -367,57 +353,103 @@
 
           <div class="portfolio-header header-five">
             <div class="portfolio-title-box">
-              <h2 class="portfolio-title">Nome do Projeto</h2>
+              <h2 class="portfolio-title">Lavanderia</h2>
               <p class="portfolio-subtitle">Descrição vai Aqui</p>
             </div>
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-full-width" src="img/portfolio-05.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-left" src="img/portfolio-05.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-right" src="img/portfolio-05.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
+            <img src="img/lavanderia/lavanderia_02.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_03.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_04.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_05.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_06.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_07.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_08.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_09.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_10.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_11.jpg" alt="an image">
+            <img src="img/lavanderia/lavanderia_12.jpg" alt="an image">
+          </div>
+        </div>
+        <!-- /modal -->
+      </figure>
+
+      <!-- Portfolio Item 6 -->
+      <figure class="portfolio-item">
+        <img src="img/documentos/documentos_01.jpg" alt="portfolio item">
+        <figcaption>
+          <h2 class="portfolio-title">Documentos</h2>
+          <p class="portfolio-desc">Uma curta descrição vai aqui</p>
+          <a href="#" class="portfolio-link">Mais</a>
+        </figcaption>
+
+        <!-- Portfolio Modal 6 -->
+        <div class="portfolio-modal">
+
+          <button class="modal-close">
+            <svg viewBox="0 0 100 52" width="30" height="20">
+              <line x1="2" y1="58" x2="98" y2="2" stroke-width="10" stroke="black" />
+              <line x1="2" y1="2" x2="98" y2="58" stroke-width="10" stroke="black" />
+            </svg>
+          </button>
+
+          <div class="portfolio-header header-six">
+            <div class="portfolio-title-box">
+              <h2 class="portfolio-title">Documentos</h2>
+              <p class="portfolio-subtitle">Descrição vai Aqui</p>
+            </div>
+          </div>
+          <!-- /portfolio-header -->
+          <div class="portfolio-content">
+            <img src="img/documentos/documentos_02.jpg" alt="an image">
+            <img src="img/documentos/documentos_03.jpg" alt="an image">
+            <img src="img/documentos/documentos_04.jpg" alt="an image">
+            <img src="img/documentos/documentos_05.jpg" alt="an image">
+            <img src="img/documentos/documentos_06.jpg" alt="an image">
+            <img src="img/documentos/documentos_07.jpg" alt="an image">
+            <img src="img/documentos/documentos_08.jpg" alt="an image">
+          </div>
+        </div>
+        <!-- /modal -->
+      </figure>
+
+      <!-- Portfolio Item 7 -->
+      <figure class="portfolio-item">
+        <img src="img/mudanca/mudanca_01.jpg" alt="portfolio item">
+        <figcaption>
+          <h2 class="portfolio-title">Mudança</h2>
+          <p class="portfolio-desc">Uma curta descrição vai aqui</p>
+          <a href="#" class="portfolio-link">Mais</a>
+        </figcaption>
+
+        <!-- Portfolio Modal 7 -->
+        <div class="portfolio-modal">
+
+          <button class="modal-close">
+            <svg viewBox="0 0 100 52" width="30" height="20">
+              <line x1="2" y1="58" x2="98" y2="2" stroke-width="10" stroke="black" />
+              <line x1="2" y1="2" x2="98" y2="58" stroke-width="10" stroke="black" />
+            </svg>
+          </button>
+
+          <div class="portfolio-header header-five">
+            <div class="portfolio-title-box">
+              <h2 class="portfolio-title">Mudança</h2>
+              <p class="portfolio-subtitle">Descrição vai Aqui</p>
+            </div>
+          </div>
+          <!-- /portfolio-header -->
+          <div class="portfolio-content">
+            <img src="img/mudanca/mudanca_02.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_03.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_04.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_05.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_06.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_07.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_08.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_09.jpg" alt="an image">
+            <img src="img/mudanca/mudanca_10.jpg" alt="an image">
           </div>
         </div>
         <!-- /modal -->
@@ -451,17 +483,17 @@
     <p>Siga-me nas redes sociais</p>
 
     <div class="social-icons">
-      <a class="social-icon tooltip" href="https://www.linkedin.com/in/albertwillians/">
-        <span class="tooltiptext">Linkedin</span>
-        <img src="img/instagram.svg" alt="linkedin">
+      <a class="social-icon tooltip" href="https://twitter.com/deia_organizer">
+        <span class="tooltiptext">Twitter</span>
+        <img src="img/twitter.svg" alt="Twitter">
       </a>
-      <a class="social-icon tooltip" href="https://www.instagram.com/albertwillians/">
+      <a class="social-icon tooltip" href="https://www.facebook.com/andreiasalustianoorganizer">
+        <span class="tooltiptext">Facebook</span>
+        <img src="img/facebook.png" alt="Facebook">
+      </a>
+      <a class="social-icon tooltip" href="https://www.instagram.com/deia_organizer/?hl=af">
         <span class="tooltiptext">Instagram</span>
-        <img src="img/instagram.svg" alt="instagram">
-      </a>
-      <a class="social-icon tooltip" href="https://github.com/AlbertWillians">
-        <span class="tooltiptext">GitHub</span>
-        <img src="img/github.svg" alt="github">
+        <img src="img/instagram.svg" alt="Instagram">
       </a>
     </div>
 
