acertando estilos e retirando o carousel

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
               occaecat cupidatat non proident.</p>
+
             <img src="img/cozinha/cozinha_02.jpg" alt="an image">
             <img src="img/cozinha/cozinha_03.jpg" alt="an image">
             <img src="img/cozinha/cozinha_04.jpg" alt="an image">
@@ -188,6 +189,13 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
+
             <img src="img/banheiro/banheiro_02.jpg" alt="an image">
             <img src="img/banheiro/banheiro_03.jpg" alt="an image">
             <img src="img/banheiro/banheiro_04.jpg" alt="an image">
@@ -239,6 +247,12 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
             <img src="img/closet/closet_02.jpg" alt="an image">
             <img src="img/closet/closet_03.jpg" alt="an image">
             <img src="img/closet/closet_04.jpg" alt="an image">
@@ -299,6 +313,12 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
             <img src="img/infantil/infantil_02.jpg" alt="an image">
             <img src="img/infantil/infantil_03.jpg" alt="an image">
             <img src="img/infantil/infantil_04.jpg" alt="an image">
@@ -359,6 +379,12 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
             <img src="img/lavanderia/lavanderia_02.jpg" alt="an image">
             <img src="img/lavanderia/lavanderia_03.jpg" alt="an image">
             <img src="img/lavanderia/lavanderia_04.jpg" alt="an image">
@@ -402,6 +428,12 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
             <img src="img/documentos/documentos_02.jpg" alt="an image">
             <img src="img/documentos/documentos_03.jpg" alt="an image">
             <img src="img/documentos/documentos_04.jpg" alt="an image">
@@ -441,6 +473,12 @@
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+              occaecat cupidatat non proident.</p>
             <img src="img/mudanca/mudanca_02.jpg" alt="an image">
             <img src="img/mudanca/mudanca_03.jpg" alt="an image">
             <img src="img/mudanca/mudanca_04.jpg" alt="an image">
