--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,17 @@
     </div>
   </section>
 
+  <section id="tips" class="tips">
+    <!-- LightWidget WIDGET -->
+    <h1>Dicas</h1>
+    <iframe src="//lightwidget.com/widgets/3aabb4388455595c8989dbf28aa1c01d.html" scrolling="no"
+      allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;">
+    </iframe>
+
+    </div>
+
+  </section>
+
   <section id="contact" class="contact">
     <h1>Fale Comigo</h1>
     <form id="my-form" action="https://formspree.io/f/xvodqqed" method="POST">
@@ -1104,6 +1115,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+
 
 </body>
 
