refatorando código e estilizando alguns detalhes

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
     </div>
   </section>
 
+  <section id="work" class="work">
+    <h1>Serviços</h1>
+  </section>
+
   <section id="portfolio" class="portfolio">
     <h1>Portfólio</h1>
     <div class="portfolio-items">
@@ -1058,9 +1062,16 @@
   <section id="tips" class="tips">
     <!-- LightWidget WIDGET -->
     <h1>Dicas</h1>
-    <iframe src="//lightwidget.com/widgets/3aabb4388455595c8989dbf28aa1c01d.html" scrolling="no"
-      allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;">
-    </iframe>
+    <!-- LightWidget WIDGET -->
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe
+      src="//lightwidget.com/widgets/94e6ab8900df592ea2521b69eb10334e.html" scrolling="no" allowtransparency="true"
+      class="lightwidget-widget-mobile" style="width:100%;border:0;overflow:hidden;"></iframe>
+
+    <!-- LightWidget WIDGET -->
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe
+      src="//lightwidget.com/widgets/c3ff9973b3f756e099a645e855f35edf.html" scrolling="no" allowtransparency="true"
+      class="lightwidget-widget-mq" style="width:100%;border:0;overflow:hidden;"></iframe>
+
 
     </div>
 
