Alterando detalhes no Site da Andreia

--- a/index.html
+++ b/index.html
@@ -67,39 +67,77 @@
   </div>
 
   <section class="intro">
-    <div class="intro-right">
-      <img src="img/home/perfil_03.png" alt="A person">
-    </div>
-    <div class="intro-middle">
-      <img src="img/home/perfil_02.png" alt="A person">
-    </div>
     <div class="intro-left">
-      <img src="img/home/perfil_01.png" alt="A person">
+      <img src="img/home/home.png" alt="A closet">
     </div>
   </section>
 
   <section id="about" class="about-me">
-    <img class="about-img" src="img/cursos/cursos_01.jpg" alt="A picture of a kitchen">
+    <img class="about-img" src="img/home/perfil_03.png" alt="A picture of a kitchen">
     <h1 class="about-title">Andreia Salustiano</h1>
     <h2 class="about-subtitle">Personal Organizer</h2>
     <div class="about-text">
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident."</p>
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident."</p>
+      <h4>Quem sou?</h4>
+      <p>"
+        Olá, sou Andréia Salustiano Organizadora Profissional, estou aqui para ajudar você a transformar a sua vida
+        através da organização.
+        Sou Personal Organizer desde 2018, especialista em Organização de Mudanças e Organização Residencial.
+        Sou mãe, profissional, dona de casa e uma pessoa em busca de constante aprendizado. Também formada em Nutrição,
+        Gestão Empresarial e Design de Interiores. Com tantas habilidades desenvolvidas, busco fazer uma mistura de tudo
+        isso e levar as melhores soluções para cada lar. Afinal, cada casa é um caso.
+        Através da Organização dos ambientes busco levar mais qualidade de vida, bem estar e praticidade para as
+        pessoas, de forma prática e ágil e com muito cuidado e dedicação.
+        A paixão por Organização é tão grande, que meu lar ficou pequeno, então transformei essa paixão em propósito de
+        vida"
+      <p>
+        Mas a Déia não está sozinha nesse propósito, tenho um time incrível que auxilia nessa jornada.
+      </p>
+      <span>
+        <h4>Quer saber mais sobre como posso te ajudar?</h4>
+      </span>
+
+      <a class="button" href="#contact">CLIQUE AQUI</a>
+      </p>
     </div>
   </section>
 
   <section id="work" class="work">
     <h1>Serviços</h1>
+
+    <div class="content">
+      <div class="card" style="width: 40%;">
+        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">ORGANIZAÇÃO RESIDENCIAL</h5>
+          <p class="card-text">Some quick example text to build on the card
+            title and make up the bulk of the card's
+            content.</p>
+          <a href="#contact" class="btn button">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 40%;">
+        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">ORGANIZAÇÃO MUDANÇAS</h5>
+          <p class="card-text">Some quick example text to build on the card
+            title and make up the bulk of the card's
+            content.</p>
+          <a href="#contact" class="btn button">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 40%;">
+        <img src="./img//cozinha/cozinha_01.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">ORGANIZAÇÃO BABY</h5>
+          <p class="card-text">Some quick example text to build on the card
+            title and make up the bulk of the card's
+            content.</p>
+          <a href="#contact" class="btn button">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+
   </section>
 
   <section id="portfolio" class="portfolio">
@@ -1063,14 +1101,16 @@
     <!-- LightWidget WIDGET -->
     <h1>Dicas</h1>
     <!-- LightWidget WIDGET -->
-    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe
-      src="//lightwidget.com/widgets/94e6ab8900df592ea2521b69eb10334e.html" scrolling="no" allowtransparency="true"
-      class="lightwidget-widget-mobile" style="width:100%;border:0;overflow:hidden;"></iframe>
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+    <iframe src="//lightwidget.com/widgets/3278f49d68ea57538fbe81d414997f66.html" scrolling="no"
+      allowtransparency="true" class="lightwidget-widget-mobile" style="width:100%;border:0;overflow:hidden;">
+    </iframe>
 
     <!-- LightWidget WIDGET -->
-    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe
-      src="//lightwidget.com/widgets/c3ff9973b3f756e099a645e855f35edf.html" scrolling="no" allowtransparency="true"
-      class="lightwidget-widget-mq" style="width:100%;border:0;overflow:hidden;"></iframe>
+    <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+    <iframe src="//lightwidget.com/widgets/4f935c848b7453749957bb18ed59d309.html" scrolling="no"
+      allowtransparency="true" class="lightwidget-widget-mq" style="width:100%;border:0;overflow:hidden;">
+    </iframe>
 
 
     </div>
